@@ -1,3 +1,7 @@
+2007-10-15  Doug Hellmann  <doug.hellmann@gmail.com>
+
+	* PyMOTW/difflib/difflib_junk.py: Add another example to the difflib write-up showing how the junk filter works.
+
 2007-10-14  Doug Hellmann  <doug.hellmann@gmail.com>
 
 	* PyMOTW/shlex/__init__.py: Add the shlex examples.
